Fixed gap in content navigation

--- a/style.css
+++ b/style.css
@@ -306,7 +306,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 0.65rem;
     padding-bottom: 3.1rem;
     margin: 1.4rem 0rem 0rem 0rem;
   }
